2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	Make gpinyin script stand alone.

	* subs.pl: Delete, moving its content into...
	* gpinyin.pl: ...here.
	(vowel_t): Use explicit list with `my`.
	(vowel_n, vowel_t): Declare local scalar `$vowel_with_tone`
	using `my`.
	* gpinyin.am (dist_gpinyin_DATA): Delete.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* gpinyin.am (gpinyin): Fix missing dependency on
	`$(SH_DEPS_SED_SCRIPT)`.

2021-05-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* gpinyin.1.man: Render the tone mark table only if the output
	device might be capable.

	Fixes <https://savannah.gnu.org/bugs/index.php?55215>.

2021-05-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* gpinyin.1.man: Work around inability of grops and gropdf to
	construct some Unicode composite characters.  Use groff
	composite special characters for "a" with acute and grave
	accents, and define strings for "a" with macron (overline) and
	with háček/caron accents.  Use different string definitions for
	nroff and troff modes so we don't regress UTF-8 terminal output.

2021-05-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* subs.pl (vowel_t): Fix incorrect rendering of base glyph 'U',
	which was being forced to lowercase when a dieresis and tone
	mark were both being applied.  This caused the tone mark to
	overlap the dieresis, so decrease the font size of the base
	glyph even more to compensate.  The result is ugly but
	comprehensible.

	See <https://savannah.gnu.org/bugs/?57524>, partially mitigated
	but not completely resolved.

2021-05-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* subs.pl (%tones1_Unicode): Fix copy and paste error.  Emit
	U+01D5 (Latin capital letter u with dieresis and macron) for Ü
	with tone 1, instead of U+016A (Latin capital letter u with
	macron).

	Fixes <https://savannah.gnu.org/bugs/?60562>.

2021-05-09  G. Branden Robinson <g.branden.robinson@gmail.com>
