@@ -1,5 +1,11 @@
 2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* gpinyin.pl: Report groff version number along with this
+	program's own when not run from source tree.  Drop dead code.
+	Bump micro version number to reflect recent restructuring.
+
+2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	Make gpinyin script stand alone.
 
 	* subs.pl: Delete, moving its content into...
